fix: change text align for code style

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ code {
   border-radius: 4px;
   font-family: "Courier New", Courier, monospace;
   color: #4F4F4F;
+  text-align: left;
 }
 
 pre {
